--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13953,16 +13953,23 @@ div#preloader {
 }
 
 .dia-banner-section .dia-banner-content h1 {
-  color: #282350;
-  font-size: 70px;
+  color: var(--color-default);
+  font-size: 55px;
   font-weight: 700;
   line-height: 1.071;
   padding: 15px 0px 25px;
 }
+.dia-banner-section .dia-banner-content h1 span{
 
+  color: var(--color-primary);
+  font-size: 55px;
+  font-weight: 700;
+  line-height: 1.071;
+  padding: 15px 0px 25px;
+}
 .dia-banner-section .dia-banner-content p {
-  font-size: 22px;
-  color: #403b64;
+  font-size: 18px;
+  color: var(--color-default);
 }
 
 .dia-banner-section .dia-banner-content .dia-banner-btn {
@@ -14019,6 +14026,8 @@ div#preloader {
   position: relative;
   text-align: left;
   vertical-align: top;
+  font-size: 18px !important;
+  font-weight: 100;
 }
 
 .dia-banner-section .cd-headline.clip .cd-words-wrapper::after {
@@ -14026,7 +14035,7 @@ div#preloader {
   top: 10px;
   right: 0;
   width: 2px;
-  height: 65px;
+  height: 27px;
   position: absolute;
   background-color: #282350;
 }
@@ -14118,14 +14127,12 @@ div#preloader {
 }
 
 .dia-service-section .dia-service-details .dia-service-item {
-  width: 50%;
-  float: left;
-  margin-bottom: 30px;
+ 
 }
 
 .dia-service-section .dia-service-details .dia-service-item h3 {
-  color: #282350;
-  font-size: 20px;
+  color: var(--color-default);
+  font-size: 18px;
   font-weight: 700;
   padding-bottom: 16px;
 }
@@ -14133,7 +14140,7 @@ div#preloader {
 .dia-service-section .dia-service-details .dia-service-item li {
   padding-left: 15px;
   position: relative;
-  padding-bottom: 5px;
+  padding-bottom: 15px;
 }
 
 .dia-service-section .dia-service-details .dia-service-item li:before {
@@ -14273,7 +14280,7 @@ div#preloader {
 }
 
 .dia-about-content .dia-about-list li {
-  width: 50%;
+  /* width: 50%; */
   float: left;
   color: #282350;
   font-weight: 700;
@@ -14285,7 +14292,7 @@ div#preloader {
 .dia-about-content .dia-about-list li:after {
   left: 0;
   top: -3px;
-  color: #25d98f;
+  color: var(--color-primary);
   font-size: 20px;
   content: "";
   font-weight: 900;
