--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13919,7 +13919,7 @@ div#preloader {
 }
 
 .dia-banner-section .banner-side-img.banner-img1 {
-  opacity: 0;
+  /* opacity: 0; */
   right: -300px;
   transition-delay: 200ms;
   transition: all 1200ms ease;
@@ -13927,7 +13927,7 @@ div#preloader {
 
 .dia-banner-section .banner-side-img.banner-img2 {
   /* opacity: 0; */
-  /* right: -300px; */
+  right: -300px;
   transition-delay: 500ms;
   transition: all 1500ms ease;
 }
@@ -14579,14 +14579,13 @@ div#preloader {
   padding-top: 55px;
 }
 
-/* .dia-team-section .dia-team-pic-text .dia-team-img:after {
+.dia-team-section .dia-team-pic-text .dia-team-img:after {
   width: 236px;
   height: 236px;
   content: "";
   position: absolute;
   top: 0;
   left: 100px;
-  right: 20px;
   opacity: 0;
   visibility: hidden;
   border: double 2px transparent;
@@ -14595,7 +14594,7 @@ div#preloader {
   background-origin: border-box;
   transition: 0.3s all ease-in-out;
   background-clip: content-box, border-box;
-} */
+}
 
 .dia-team-section .dia-team-pic-text .dia-team-img .team-mem-img-ei {
   z-index: 1;
@@ -14624,12 +14623,8 @@ div#preloader {
   z-index: -2;
   right: -68px;
 }
-.dia-team-social{
 
-  display: none;
-}
-
-/* .dia-team-section .dia-team-pic-text .dia-team-social {
+.dia-team-section .dia-team-pic-text .dia-team-social {
   top: 47px;
   z-index: 1;
   right: 50px;
@@ -14638,9 +14633,9 @@ div#preloader {
   position: absolute;
   transition-delay: 0.2s;
   transition: 0.5s all ease-in-out;
-} */
+}
 
-/* .dia-team-section .dia-team-pic-text .dia-team-social a {
+.dia-team-section .dia-team-pic-text .dia-team-social a {
   width: 35px;
   height: 35px;
   display: block;
@@ -14652,9 +14647,9 @@ div#preloader {
   z-index: 1;
   background-color: #fff;
   box-shadow: 0px 0px 18px 0px rgba(43, 1, 68, 0.23);
-} */
+}
 
-/* .dia-team-section .dia-team-pic-text .dia-team-social a:after {
+.dia-team-section .dia-team-pic-text .dia-team-social a:after {
   position: absolute;
   content: "";
   height: 100%;
@@ -14695,7 +14690,7 @@ div#preloader {
 .dia-team-section .dia-team-pic-text .dia-team-social a:hover:after {
   opacity: 1;
   visibility: visible;
-} */
+}
 
 .dia-team-section .dia-team-pic-text .dia-team-text {
   margin-top: 20px;
@@ -15114,7 +15109,7 @@ div#preloader {
 /*Newslatter area*/
 /*----------------------------------------------------*/
 .dia-footer-section {
-  padding-top: 140px;
+  padding-top: 50px;
 }
 
 .dia-footer-widget .dia-widget-title {
@@ -15309,12 +15304,12 @@ div#preloader {
 @media only screen and (min-width: 1367px) and (max-width: 1700px) {
   .dia-banner-section .banner-side-img.banner-img1,
   .dia-banner-section .banner-side-img.banner-img2 {
-    /* right: -450px; */
+    right: -450px;
   }
 
   .dia-banner-section .banner-side-img.banner-img1.view-on,
   .dia-banner-section .banner-side-img.banner-img2.view-on {
-    /* right: -200px; */
+    right: -200px;
   }
 
   .dia-banner-section .banner-side-shape1,
@@ -15325,7 +15320,7 @@ div#preloader {
 @media screen and (max-width: 1440px) {
   .dia-banner-section .banner-side-img.banner-img1,
   .dia-banner-section .banner-side-img.banner-img2 {
-    /* right: -600px; */
+    right: -600px;
   }
 
   .dia-banner-section .banner-side-img.banner-img1.view-on,
@@ -15360,7 +15355,7 @@ div#preloader {
 @media screen and (max-width: 1024px) {
   .dia-banner-section .banner-side-img.banner-img1,
   .dia-banner-section .banner-side-img.banner-img2 {
-    /* right: -800px; */
+    right: -800px;
   }
 
   .dia-banner-section .banner-side-img.banner-img1.view-on,
