--- a/src/assets/fruit/css/style.css
+++ b/src/assets/fruit/css/style.css
@@ -221,10 +221,10 @@
 }
 
 @media (min-width: 992px) {
-    .hero-header,
+    /* .hero-header,
     .page-header {
         margin-top: 152px !important;
-    }
+    } */
 }
 
 @media (max-width: 992px) {
