--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,13 @@
     --linear:linear-gradient(81deg, #e02b29 0%, #ff0303ed 75%, #ff3505 100%);
   }
 
+
+  small {
+    color: #f8001b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .nws-button{
     text-align: center;
   
@@ -33,6 +40,26 @@
     border: 1px solid var(--color-primary);
     color: var(--color-primary);
   }
+
+  .btnLogin {
+    padding: 1em 3em;
+    font-size: 13px;
+    font-weight: 500;
+    color: #fff;
+    background-image: var(--linear);
+    border: none;
+    border-radius: 45px;
+
+    cursor: pointer;
+    outline: none;
+}
+
+.btnLogin:hover {
+    color: var(--color-primary);
+    background-image: linear-gradient(81deg, #fff 0%, #fff 75%, #fff 100%);
+    border: 1px solid var(--color-primary);
+
+}
 
   .section-header {
     padding: 30px 0;
@@ -122,6 +149,72 @@
         font-size: 25px;
 
     }
+}
+
+.page-header {
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: #266486;
+    padding: 50px 0;
+    /* background-image: url('@/assets/img/img1.webp');  */
+    box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 10%);
+
+}
+
+.page-header:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    background: rgba(0, 0, 0, .45);
+}
+.page-header__inner {
+    position: relative;
+}
+
+.page-header h1 {
+    position: relative;
+    color: #fff;
+    font-size: 2.8rem;
+    font-weight: 700;
+    padding-top: 1rem;
+    margin-bottom: 1rem;
+    text-transform: inherit;
+}
+.page-header p {
+    max-width: 530px;
+    font-size: 1.2rem;
+    font-weight: 500;
+    color: #fff;
+}
+
+
+
+@media (max-width: 991px){
+    section {
+    padding: 50px !important;
+}
+}
+
+@media (max-width: 768px){
+
+    section {
+    padding: 20px !important;
+}
+    .page-header h1 {
+    
+    font-size: 2.5rem;
+    text-align: center;   
+}
+
+.page-header p {
+
+    text-align: justify;
+}
 }
 
 /* fin banier */
