--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,18 @@
     --linear:linear-gradient(81deg, #e02b29 0%, #ff0303ed 75%, #ff3505 100%);
   }
 
+  .noresul {
+    border: 1px solid var(--color-primary);
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 50px;
+    border-radius: 6px;
+    font-size: 20px;
+    
+    }
 
   small {
     color: #f8001b;
@@ -74,7 +86,6 @@
     background-size: cover;
     background-color: #266486;
     height: 50vh;
-   
     box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 10%);
 
 }
@@ -160,6 +171,7 @@
     padding: 50px 0;
     /* background-image: url('@/assets/img/img1.webp');  */
     box-shadow:inset 0 0 0 2000px rgba(0, 0, 0, 10%);
+    height: 40vh;
 
 }
 
