--- a/src/assets/fruit/css/style.css
+++ b/src/assets/fruit/css/style.css
@@ -211,10 +211,11 @@
 
 .page-header {
     position: relative;
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/cart-page-header-img.jpg);
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../../site/arriere.png);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: 91px;
 }
 
 @media (min-width: 992px) {
