--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9751,7 +9751,7 @@ Sticky Menu
 .s2-pricing_section .s2-pricing_item {
   margin: 0 auto;
   overflow: hidden;
-  max-width: 300px;
+  width: 300px;
   border-radius: 15px;
   transition: 0.4s all ease-in-out;
  
